<resources>
    <string name="app_name">Liveler</string>

    <string name="retry">Retry</string>
    <string name="post_error">An error occurred while loading the posts</string>

    <!--LoginActivity-->
    <string name="txt_login">Login</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_sign_up">Don\'t have an account?</string>
    <string name="txt_sign_up1">Sign Up!</string>
    <string name="txt_hint_username">Username</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_hint_dob">Birthday</string>

    <!--RegisterActivity-->
    <string name="txt_hint_first_name">Name</string>
    <string name="txt_hint_middle_name">Middle Name</string>
    <string name="txt_hint_last_name">Last Name</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_phone">Phone</string>
    <string name="txt_hint_otp">OTP</string>
    <string name="txt_register">Register</string>
    <string name="txt_already_login">Already a member? Login</string>

    <!--HomeActivity-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">View your profile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_timeline">Timeline</string>
    <string name="menu_video">Video</string>
    <string name="menu_friends">Followers</string>
    <string name="menu_bank">Bank Account</string>
    <string name="menu_adrequest">Ad Request</string>
    <string name="menu_favorites">Favorite feeds</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_pages">Pages</string>
    <string name="menu_birthdays">Birthdays</string>
    <string name="menu_myaccount">My account</string>
    <string name="menu_logout">Logout</string>

    <!--TimelineAdapter-->
    <string name="edt_message">Share what you are thinking here…</string>
    <string name="btn_post_status">Post Status</string>
    <string name="btn_preview">Preview</string>
    <string name="error_generic">Playback failed</string>

    <!--ProfileFragment-->
    <string name="tab_timeline">Timeline</string>
    <string name="tab_about">About</string>
    <string name="tab_friends">Friends</string>

    <!--AboutFragment-->
    <string name="tv_profile_info">Profile Info</string>
    <string name="tv_about_me">About Me</string>
    <string name="tv_birthday">Birth Day</string>
    <string name="tv_birth_place">Birth Place</string>
    <string name="tv_lives_in">Lives in</string>
    <string name="tv_occupation">Occupation</string>
    <string name="tv_joined">Joined</string>
    <string name="tv_website">Website</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_status">Status</string>
    <string name="tv_email">Email</string>
    <string name="tv_edit">Edit</string>

    <!--FriendsFragment-->
    <string name="tv_user_friends">James\'s Freinds (86)</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_accept">Confirm</string>
    <string name="btn_decline">Delete</string>

    <!--GroupsFragment-->
    <string name="btn_create_group">Create Group</string>
    <string name="hint_search">Search</string>
    <string name="tv_members">%1$s Friends in the Group</string>

    <!--PagesFragment-->
    <string name="btn_create_page">Create Page</string>

    <!--AddBankAccountFragment-->
    <string name="txt_bank_details">Bank Details</string>
    <string name="txt_hint_account_holder_name">Account Holder Name</string>
    <string name="txt_hint_bank_name">Name of Bank</string>
    <string name="txt_hint_account_number">Account Number</string>
    <string name="txt_hint_branch">Name of Branch</string>
    <string name="txt_hint_ifsc">IFSC Code</string>
    <string name="btn_add_account">Add Bank Account </string>

    <!--NotificationFragment-->
    <string name="txt_notification">Notification</string>
    <string name="txt_read_notification">Read All Notification</string>

    <!--AdFragment-->
    <string name="btn_payment">Make Payment</string>

    <!--EditProfileFragment-->
    <string name="txt_hint_date_of_birth">Date of Birth</string>
    <string name="txt_hint_place_of_birth">Place of Birth</string>
    <string name="txt_hint_about">About</string>
    <string name="txt_hint_lives_in">Lives in</string>
    <string name="txt_hint_occupation">Occupation</string>
    <string name="txt_hint_joined">Joined</string>
    <string name="txt_hint_website">Website</string>
    <string name="txt_hint_gender">Gender</string>
    <string name="txt_hint_status">Status</string>

    <array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="status">
        <item>Select Status</item>
        <item>Single</item>
        <item>Married</item>
    </array>

    <!--ChatFragment-->
    <string name="txt_hint_message">Enter message</string>
    <string name="btn_send">SEND</string>

    <!--AllUsersFragment-->
    <string name="btn_add_friend">Add Friend</string>

    <!--RequestFragment-->
    <string name="txt_hint_title">Title</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_request_ad">Request Ad</string>

    <!--VideoUploadDialogFragment-->
    <string name="btn_post">Post</string>
    <string name="btn_cancel">Cancel</string>

    <!--MyVideoFragment-->
    <string name="btn_request_amount">Request Amount</string>

    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <string name="internal_storage">Internal storage</string>

    <!--Error-->
    <string name="error_login">Incorrect email or password</string>
    <string name="error_registration">Registration failed</string>

    <string name="error_first_name">Invalid first name</string>
    <string name="error_middle_name">Invalid middle name</string>
    <string name="error_last_name">Invalid last name</string>
    <string name="error_phone">Invalid phone</string>
    <string name="error_password">Invalid password</string>
    <string name="error_email">Invalid email</string>
    <string name="error_name">"Invalid user name"</string>
    <string name="error_email_response">"The email has already been taken."</string>
    <string name="error_login_response">"User name or password is incorrect"</string>

    <string name="error_holder_name">"Invalid account holder name"</string>
    <string name="error_bank_name">"Invalid bank name"</string>
    <string name="error_account_number">"Invalid account number"</string>
    <string name="error_branch">"Invalid branch"</string>
    <string name="error_ifsc">"Invalid IFSC code"</string>

    <string name="error_invalid_file">This type of file cannot be supported</string>
    <string name="error_pic">Select a valid image from gallery</string>
    <string name="error_status">Please add some status</string>
    <string name="error_title">Please add some title</string>

    <string name="error_no_video">No videos uploaded today</string>
    <string name="error_no_notification">No notifications</string>
    <string name="error_no_post">No posts are available</string>
    <string name="error_no_friends">No friend requests are available</string>
    <string name="error_no_chat">No chat history is available</string>
    <string name="error_no_users">No users are is available</string>

    <!--Preferences-->
    <string name="token">token</string>
    <string name="user">user</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
