<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.sma.socialmediaapp.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBgLogin">

        <EditText
                android:id="@+id/edtUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorEdtLine"
                android:ems="10"
                android:hint="@string/txt_hint_username"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_user"
                android:textColor="@color/colorTextCommon"
                android:textColorHint="@color/colorTextCommon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.40" />

        <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorEdtLine"
                android:ems="10"
                android:hint="@string/txt_hint_password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_password"
                android:textColor="@color/colorTextCommon"
                android:textColorHint="@color/colorTextCommon"
                app:layout_constraintEnd_toEndOf="@+id/edtUserName"
                app:layout_constraintStart_toStartOf="@+id/edtUserName"
                app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_yellow"
            android:text="@string/txt_login"
            android:textAllCaps="false"
            android:textColor="@color/colorTextCommon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/txt_forgot_password"
            android:textColor="@color/colorTextForgotPass"
            app:layout_constraintBottom_toTopOf="@+id/tvSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/txt_sign_up"
            android:textColor="@color/colorTextCommon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <RelativeLayout
                android:id="@+id/layoutLoading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>