<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.timeline.VideoPreviewDialogFragment">

    <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="0dp"
            android:layout_height="265dp"
            android:background="@color/colorTextCommonBlack"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/txt_hint_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerView" />

    <Button
            android:id="@+id/btnPost"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_blue"
            android:text="@string/btn_post"
            android:textAllCaps="false"
            android:textColor="@color/colorTextCommonWhite"
            app:layout_constraintEnd_toEndOf="@+id/edtTitle"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edtTitle"
            app:layout_constraintTop_toBottomOf="@+id/edtTitle" />

    <Button
            android:id="@+id/btnCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_yellow"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorTextCommonWhite"
            app:layout_constraintBottom_toBottomOf="@+id/btnPost"
            app:layout_constraintEnd_toStartOf="@+id/btnPost"
            app:layout_constraintTop_toTopOf="@+id/btnPost" />

</androidx.constraintlayout.widget.ConstraintLayout>